before einsatz refactor